--- a/src/AIGuesserEC/AIGuesserEC 2010.csproj
+++ b/src/AIGuesserEC/AIGuesserEC 2010.csproj
@@ -112,18 +112,14 @@
     </Compile>
     <Compile Include="AdaptItEncConverter.cs" />
     <Compile Include="AdaptItEncConverterConfig.cs" />
-    <Compile Include="AdaptItGuesserAutoConfigDialog.cs">
-      <SubType>Form</SubType>
-    </Compile>
+    <Compile Include="AdaptItGuesserAutoConfigDialog.cs" />
     <Compile Include="AdaptItGuesserAutoConfigDialog.Designer.cs">
       <DependentUpon>AdaptItGuesserAutoConfigDialog.cs</DependentUpon>
     </Compile>
     <Compile Include="AdaptItGuesserEncConverter.cs" />
     <Compile Include="AdaptItGuesserEncConverterConfig.cs" />
     <Compile Include="AdaptItKBReader.cs" />
-    <Compile Include="AdaptItLookupAutoConfigDialog.cs">
-      <SubType>Form</SubType>
-    </Compile>
+    <Compile Include="AdaptItLookupAutoConfigDialog.cs" />
     <Compile Include="AdaptItLookupAutoConfigDialog.Designer.cs">
       <DependentUpon>AdaptItLookupAutoConfigDialog.cs</DependentUpon>
     </Compile>
