--- a/src/EcTranslators/EcTranslators.csproj
+++ b/src/EcTranslators/EcTranslators.csproj
@@ -273,49 +273,46 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Google.Api.Gax">
-      <Version>4.8.0</Version>
+      <Version>4.10.0</Version>
     </PackageReference>
     <PackageReference Include="Google.Api.Gax.Grpc">
-      <Version>4.8.0</Version>
+      <Version>4.10.0</Version>
     </PackageReference>
     <PackageReference Include="Google.Api.Gax.Rest">
-      <Version>4.8.0</Version>
+      <Version>4.10.0</Version>
     </PackageReference>
     <PackageReference Include="Google.Apis">
-      <Version>1.68.0</Version>
+      <Version>1.69.0</Version>
     </PackageReference>
     <PackageReference Include="Google.Apis.Auth">
-      <Version>1.68.0</Version>
+      <Version>1.69.0</Version>
     </PackageReference>
     <PackageReference Include="Google.Apis.Core">
-      <Version>1.68.0</Version>
-    </PackageReference>
-    <PackageReference Include="Google.Apis.Translate.v2">
-      <Version>1.67.0.875</Version>
+      <Version>1.69.0</Version>
     </PackageReference>
     <PackageReference Include="Google.Cloud.Translation.V2">
       <Version>3.4.0</Version>
     </PackageReference>
     <PackageReference Include="Google.Protobuf">
-      <Version>3.28.1</Version>
+      <Version>3.29.3</Version>
     </PackageReference>
     <PackageReference Include="Grpc.Core">
       <Version>2.46.6</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Configuration" Condition="('$(OS)'=='Windows_NT')">
-      <Version>8.0.0</Version>
+      <Version>9.0.1</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Condition="('$(OS)'=='Windows_NT')">
-      <Version>8.0.2</Version>
+      <Version>9.0.1</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions">
-      <Version>8.0.1</Version>
+      <Version>9.0.1</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Http.Polly" Condition="('$(OS)'=='Windows_NT')">
-      <Version>8.0.8</Version>
+      <Version>9.0.1</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions">
-      <Version>8.0.1</Version>
+      <Version>9.0.1</Version>
     </PackageReference>
     <PackageReference Include="Newtonsoft.Json" Condition="('$(OS)'=='Windows_NT')">
       <Version>13.0.3</Version>
@@ -324,19 +321,22 @@
       <Version>5.0.0</Version>
     </PackageReference>
     <PackageReference Include="System.Diagnostics.DiagnosticSource">
-      <Version>8.0.1</Version>
+      <Version>9.0.1</Version>
     </PackageReference>
     <PackageReference Include="System.Memory" Condition="('$(OS)'=='Windows_NT')">
-      <Version>4.5.5</Version>
+      <Version>4.6.0</Version>
     </PackageReference>
     <PackageReference Include="System.Net.Http.WinHttpHandler" Condition="('$(OS)'=='Windows_NT')">
-      <Version>8.0.2</Version>
+      <Version>9.0.1</Version>
     </PackageReference>
     <PackageReference Include="System.Runtime.CompilerServices.Unsafe" Condition="('$(OS)'=='Windows_NT')">
-      <Version>6.0.0</Version>
+      <Version>6.1.0</Version>
     </PackageReference>
     <PackageReference Include="System.Text.Json" Condition="('$(OS)'=='Windows_NT')">
-      <Version>8.0.5</Version>
+      <Version>9.0.1</Version>
+    </PackageReference>
+    <PackageReference Include="System.Threading.Tasks.Extensions">
+      <Version>4.6.0</Version>
     </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
